# django-zeromigrations

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  manage.py  setup.cfg
tests/: test_utils.py
zero_migrations/: app_settings.py  apps.py  backup.py  constants.py  exceptions.py
zero_migrations/management/: zeromigrations.py
zero_migrations/management/commands/: zeromigrations.py
zero_migrations/tests/: test_backup.py  test_utils.py
zero_migrations/utils/: __init__.py  backup.py  restore.py
