[metadata]
name = django-zeromigrations
version = 0.1.6
description = Django reset migrations with `zeromigrations` command with backup feature
long_description = file:README.rst
url = https://github.com/aminiun/django-zeromigrations
license = BSD-3-Clause
author = Amin Aminian
author_email = a.aminian321@gmail.com
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
